Bug 60473 - Testsuite error in 0.15.1 test-attrs
Summary: Testsuite error in 0.15.1 test-attrs
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-08 07:50 UTC by Andreas Metzler
Modified: 2013-02-12 14:54 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix dereference of varargs in p11_attrs_build() (728 bytes, patch)
2013-02-11 19:51 UTC, Stef Walter
Details | Splinter Review

Description Andreas Metzler 2013-02-08 07:50:44 UTC
Building 0.15.1 on up to date Debian/sid (with libtasn 2.14 from experimental) I get a testsuite error:
-----------------------------
(SID)ametzler@argenau:/tmp/P11-KIT/p11-kit-0.15.1$ ./common/tests/test-attrs
Segmentation fault
(SID)ametzler@argenau:/tmp/P11-KIT/p11-kit-0.15.1$ gdb ./common/tests/test-attrs
GNU gdb (GDB) 7.4.1-debian
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "i486-linux-gnu".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from /tmp/P11-KIT/p11-kit-0.15.1/common/tests/test-attrs...done.
(gdb) run
Starting program: /tmp/P11-KIT/p11-kit-0.15.1/common/tests/test-attrs
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".

Program received signal SIGSEGV, Segmentation fault.
0x0804cd71 in attrs_build (attrs=0x8055670, attrs@entry=0x0, count_to_add=1,
    copy=copy@entry=true,
    generator=generator@entry=0x804b760 <vararg_generator>,
    state=state@entry=0xffffd544) at attrs.c:110
110                     if (!add || add->type == CKA_INVALID)
(gdb) bt
#0  0x0804cd71 in attrs_build (attrs=0x8055670, attrs@entry=0x0,
    count_to_add=1, copy=copy@entry=true,
    generator=generator@entry=0x804b760 <vararg_generator>,
    state=state@entry=0xffffd544) at attrs.c:110
#1  0x0804cf3f in p11_attrs_build (attrs=attrs@entry=0x0) at attrs.c:161
#2  0x0804af5d in test_build_one (tc=0x8055290) at test-attrs.c:71
#3  0x0804e940 in CuTestRun (tc=tc@entry=0x8055290) at cutest/CuTest.c:143
#4  0x0804ef3c in CuSuiteRun (testSuite=testSuite@entry=0x8054120)
    at cutest/CuTest.c:279
#5  0x08049023 in main () at test-attrs.c:605
(gdb)
--------------------------------------
Comment 1 Stef Walter 2013-02-11 19:51:46 UTC
Created attachment 74647 [details] [review]
Fix dereference of varargs in p11_attrs_build()
Comment 2 Stef Walter 2013-02-11 19:52:23 UTC
Does this fix the issue?
Comment 3 Andreas Metzler 2013-02-12 14:28:38 UTC
"Fix dereference of varargs in p11_attrs_build()" fixes the testsuite error. Thanks.
Comment 4 Stef Walter 2013-02-12 14:54:11 UTC
Attachment 74647 [details] pushed as 0478167 - Fix dereference of varargs in p11_attrs_build()


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.