Fix dereference of varargs in p11_attrs_build()

https://bugs.freedesktop.org/show_bug.cgi?id=60473